Fix some z-index bugg

--- a/dev/sass/_1-typography.scss
+++ b/dev/sass/_1-typography.scss
@@ -66,7 +66,7 @@ $body_baseline: 0.144500;
 $headline_num: 6;
 $body_font_size: 16px;
 
-$ratio: 1.414;
+$ratio: 1.125;
 $grid-height: 1rem;
 
 @import "../../node_modules/plumber-sass/plumber";
@@ -121,7 +121,7 @@ em, blockquote { font-style: italic; font-size: 1em; }
       $leading-bottom: $anti_i - 3	);
 
     font-family: $headline_font;
-    letter-spacing: .015em * $anti_i;
+    letter-spacing: .001em * $anti_i;
   }
 }
 h4 {
